# hangar_front

./: Cargo.toml  Dockerfile  Trunk.toml  docker-compose.yml  index.html  nginx.conf
.github/workflows/: build-frontend.yml
src/: app.rs  main.rs  router.rs
src/components/: footer.rs  gauge.rs  language_switcher.rs  mod.rs  nav.rs  protected_route.rs
src/contexts/: user_context.rs
src/models/: database.rs  mod.rs  project.rs  user.rs
src/pages/: about.rs  admin.rs  auth_callback.rs  contact.rs  create_project.rs  dashboard.rs  database_dashboard.rs  home.rs  mod.rs  not_found.rs  project_dashboard.rs  terms.rs
src/services/: auth_service.rs  database_service.rs  mod.rs  project_service.rs
styles/: main.css  variables.css
