[package]
name = "hangar_front"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3"
gloo-net = "0.6"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-logger = "0.2"
i18nrs = { version = "0.1.6", features = ["yew"] }


[dependencies.web-sys]
version = "0.3"
features = [
  'Window',
  'Navigator',
]
